# hpipm-cpp

./: CMakeLists.txt  package.xml
.github/workflows/: ci.yaml
examples/: CMakeLists.txt
include/hpipm-cpp/: dense_qp.hpp  hpipm-cpp.hpp  ocp_qp_dim.hpp  ocp_qp_ipm_solver.hpp
src/: dense_qp.cpp  ocp_qp_dim.cpp  ocp_qp_ipm_solver.cpp
src/detail/: d_ocp_qp_dim_wrapper.cpp  d_ocp_qp_ipm_ws_wrapper.cpp
test/: d_ocp_qp_dim_wrapper.cpp  d_ocp_qp_ipm_ws_wrapper.cpp  d_ocp_qp_sol_wrapper.cpp  d_ocp_qp_wrapper.cpp
